--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "test": "turbo run test && npm run test:samples",
     "test:samples": "npx ts-node tests/test-samples.ts",
     "lint": "turbo run lint",
-    "dev": "turbo run dev"
+    "lint:fix": "turbo run lint:fix",
+    "dev": "turbo run dev",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "imbrn",
   "license": "MIT",
-  "dependencies": {
-    "typescript": "^4.7.2"
-  },
   "devDependencies": {
     "@types/node": "^17.0.38",
+    "eslint": "^8.17.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.0",
+    "prettier": "^2.6.2",
     "ts-node": "^10.8.0",
-    "turbo": "^1.2.14"
+    "turbo": "^1.2.14",
+    "typescript": "^4.7.2"
   },
   "workspaces": ["packages/*"]
 }
