--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint:eslint": "eslint src/**/*.{js,ts,tsx,jsx}",
+    "lint:prettier": "prettier src/**/*.{js,ts,tsx,jsx,html,css,json,md}",
+    "lint": "npm run lint:eslint && npm run lint:prettier"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shopify/eslint-plugin": "^41.3.0",
+    "eslint": "^8.17.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   }
 }
