--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
+[*.{js,jsx,ts,tsx}]
+quote_style = single
+
 [*.{js,jsx,ts,tsx,json}]
 charset = utf-8
 indent_style = space
